--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hello-world-go/grpc-go"]
-	path = hello-world-go/grpc-go
+[submodule "go/grpc-go"]
+	path = go/grpc-go
 	url = https://github.com/grpc/grpc-go
