--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "go/grpc-go"]
 	path = go/grpc-go
 	url = https://github.com/grpc/grpc-go
+[submodule "grpc/grpc"]
+	path = grpc/grpc
+	url = https://github.com/grpc/grpc
