--- a/hello/nginx/nginx.conf
+++ b/hello/nginx/nginx.conf
@@ -1,6 +1,6 @@
-user www-data;
+#user www-data;
 worker_processes auto;
-pid /run/nginx.pid;
+#pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
@@ -40,13 +40,15 @@ http {
 
     server {
         listen 60000 http2; # Plaintext
-        location /grpc.experiments.hello. {
+        location / {
             grpc_pass grpc://hello_service;
         }
     }
 
     upstream hello_service {
         zone hello_service 64k;
-        server 127.0.0.1:6000;
+        server 127.0.0.1:1234;
+        server 127.0.0.1:1235;
+        server 127.0.0.1:1236;
     }
 }
