--- a/hello/nodejs/package.json
+++ b/hello/nodejs/package.json
@@ -8,6 +8,7 @@
     "grpc": "^1.11.0",
     "grpc-tools": "^1.10.0",
     "lodash": "^4.6.1",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "yargs": "^16.2.0"
   }
 }
