--- a/proto_vs_json/package.json
+++ b/proto_vs_json/package.json
@@ -2,7 +2,9 @@
     "name": "proto_vs_json",
     "version": "0.1.0",
     "description": "Test serialization with protobuf and json",
-    "scripts": {},
+    "scripts": {
+        "build-proto": "protoc --js_out=import_style=commonjs,binary:./ --plugin=protoc-gen-grpc=node_modules/grpc-tools/bin/grpc_node_plugin user.proto"
+    },
     "keywords": [],
     "author": "Artus Rocha",
     "dependencies": {
